# discord_message_sender

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  biome.json  eslint.config.js  manifest.json  package.json  rolldown.config.mjs  styles.css  tsconfig.json  versions.json  vite.config.ts
.github/: README.ja.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml  security.yml
crates/html_to_markdown/: Cargo.toml
crates/html_to_markdown/src/: dom.rs  error.rs  frontmatters.rs  lib.rs  parser.rs  renderers.rs  utils.rs
crates/html_to_markdown/src/frontmatters/: source.rs  title.rs
crates/html_to_markdown/src/renderers/: aside.rs  code_block.rs  generic_block.rs  heading.rs  ignored_tags.rs  inline.rs  list.rs  media.rs  paragraph.rs  table.rs
crates/html_to_markdown/src/utils/: filtering.rs
crates/html_to_markdown/tests/: .gitignore  integration_test.rs
crates/parse_message/: Cargo.toml
crates/parse_message/src/: command.rs  error.rs  lib.rs  message.rs
crates/parse_message/src/command/: url.rs
docs/: releasing.md
parse_message/: Cargo.toml
parse_message/src/: command.rs  lib.rs
parse_message/src/command/: url.rs
scripts/: prepare-release.ts
src/: aggregatedLog.ts  channelPaths.ts  channelSync.ts  discordApi.ts  discordApiError.ts  discordRateLimit.ts  discordRoutes.ts  global.ts  localDateTime.ts  main.ts  messages.ts  notificationTemplates.ts  settingTab.ts  settings.ts  urlFetcher.ts  utils.ts  vault.ts  wasmBridge.ts
tests/: aggregatedLog.test.ts  channelSync.test.ts  discordApi.test.ts  localDateTime.test.ts  messages.test.ts  prepareRelease.test.ts  settings.test.ts  vault.test.ts  wasm.smoke.ts
