[workspace]
members = ["./crates/parse_message", "crates/html_to_markdown"]
resolver = "3"

[workspace.package]
version = "0.2.8"
authors = ["okawak"]
description = "Send messages to Obsidian from Discord."
edition = "2024"
repository = "https://github.com/okawak/discord_message_sender"
license-file = "LICENSE"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
