[package]
name = "parse_message"
version = "0.1.0"
edition = "2024"
authors = ["okawak <kodak2022@outlook.jp>"]
description = "Parse Discord messages"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
js-sys = "0.3"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "2"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
