[package]
name = "parse_message"
version = "0.1.3"
edition = "2024"
authors = ["okawak <kodak2022@outlook.jp>"]
description = "Parse Discord messages"
repository = "https://github.com/okawak/discord_message_sender"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.1.3", features = ["serde"] }
serde = { version = "0.1.3", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "2"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
