[package]
name = "html_to_markdown"
version.workspace = true
authors.workspace = true
description = "Parse HTML to Customized Markdown"
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
thiserror = "2"
html5ever = "0.35"

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.25"
