[package]
name = "parse_message"
version.workspace = true
authors.workspace = true
description = "Parse Discord messages"
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "2"
html_to_markdown = { path = "../html_to_markdown" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
