[package]
name = "parse_message"
version.workspace = true
authors.workspace = true
description = "Parse Discord messages"
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[dependencies]
html_to_markdown = { path = "../html_to_markdown" }
js-sys = "0.3"
thiserror = "2"
wasm-bindgen = "0.2"
